# tui_file_manager

./: .gitignore  Cargo.toml
crates/fm-application/: Cargo.toml
crates/fm-application/src/: active_window.rs  clipboard.rs  lib.rs  ui_dependencies.rs
crates/fm-application/src/ports/: drive.rs  filesystem.rs  mod.rs
crates/fm-application/src/use_cases/: copy_selection.rs  create_directory.rs  create_drive_folder.rs  delete_permanently.rs  get_entry_properties.rs  list_drive_folder.rs  mod.rs  move_selection.rs  move_to_trash.rs  open_entry.rs  paste_entries.rs  preview_entry.rs  refresh_drive_folder.rs  rename_drive_item.rs  rename_entry.rs  upload_drive_file.rs  upload_drive_folder.rs
crates/fm-domain/: Cargo.toml
crates/fm-domain/src/: clipboard.rs  drive_entry.rs  entry_properties.rs  file_node.rs  lib.rs  preview.rs  sort_mode.rs
crates/fm-infra/: Cargo.toml
crates/fm-infra/src/: google_drive.rs  lib.rs  std_filesystem.rs
crates/fm-ui/: Cargo.toml
crates/fm-ui/src/: desktop.rs  drive_window.rs  lib.rs  local_picker_window.rs  preview_window.rs  window.rs
src/: main.rs
